--- a/sample/sample-client.html
+++ b/sample/sample-client.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script src="https://s3-us-west-1.amazonaws.com/skyway-iot-sdk/dist/SiRuClient.js"></script>
+    <script src="https://nttcom.github.io/skyway-siru-client/dist/skyway-siru-client.min.js"></script>
   </head>
   <body>
     <p>
